# collaborative-circom

./: .release-please-manifest.json  Cargo.toml
co-circom/circom-mpc-compiler/: CHANGELOG.md  Cargo.toml
co-circom/circom-mpc-compiler/src/: lib.rs
co-circom/circom-mpc-vm/: CHANGELOG.md  Cargo.toml
co-circom/co-circom/: CHANGELOG.md  Cargo.toml
co-circom/co-circom-snarks/: CHANGELOG.md  Cargo.toml
co-circom/co-circom/benches/: zkey_parse.rs
co-circom/co-groth16/: CHANGELOG.md  Cargo.toml
co-circom/co-plonk/: CHANGELOG.md  Cargo.toml
co-noir/co-acvm/: CHANGELOG.md  Cargo.toml
co-noir/co-acvm/src/: lib.rs  solver.rs  types.rs
co-noir/co-acvm/src/solver/: assert_zero_solver.rs
co-noir/ultrahonk/: Cargo.toml
co-noir/ultrahonk/src/: crs.rs  field_convert.rs  lib.rs  prover.rs  sponge_hasher.rs  tests.rs  transcript.rs  types.rs  verifier.rs
co-noir/ultrahonk/src/decider/: mod.rs  polynomial.rs  prover.rs  sumcheck.rs  sumcheck_round.rs  types.rs  univariate.rs  verifier.rs  zeromorph.rs
co-noir/ultrahonk/src/decider/relations/: auxiliary_relation.rs  delta_range_constraint_relation.rs  elliptic_relation.rs  logderiv_lookup_relation.rs  mod.rs  permutation_relation.rs  poseidon2_external_relation.rs  poseidon2_internal_relation.rs  ultra_arithmetic_relation.rs
co-noir/ultrahonk/src/decider/sumcheck/: mod.rs  prover.rs  sumcheck_round.rs  verifier.rs
co-noir/ultrahonk/src/decider/zeromorph/: mod.rs  prover.rs  types.rs  verifier.rs
co-noir/ultrahonk/src/oink/: mod.rs  prover.rs  types.rs  verifier.rs
co-noir/ultrahonk/src/parse/: acir_format.rs  builder.rs  crs.rs  mod.rs  types.rs
co-noir/ultrahonk/src/poseidon2/: poseidon2_permutation.rs
co-noir/ultrahonk/src/reference_string/: file_reference_string.rs  mem_reference_string.rs  mod.rs  pippenger_reference_string.rs
co-noir/ultrahonk/tests/: poseidon.rs
mpc-core/: CHANGELOG.md  Cargo.toml
mpc-core/src/: traits.rs
tests/: Cargo.toml
