[package]
name = "co-acvm"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mpc-core.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
acvm = { version = "0.49.0", git = "https://github.com/AztecProtocol/aztec-packages/", package = "acvm" }
acir = { version = "0.49.0", git = "https://github.com/AztecProtocol/aztec-packages/", package = "acir" }
thiserror.workspace = true
