[package]
name = "co-acvm"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mpc-core.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
serde_json.workspace = true
acvm = { version = "0.49.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "acvm" }
acir = { version = "0.49.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "acir" }
noirc-artifacts = { version = "0.33.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "noirc_artifacts" }
noirc-abi = { version = "0.33.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "noirc_abi" }
thiserror.workspace = true
toml.workspace = true
color-eyre.workspace = true
