[package]
name = "co-acvm"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acir = { version = "0.49.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "acir" }
acvm = { version = "0.49.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "acvm" }
ark-ec.workspace = true
ark-ff.workspace = true
eyre.workspace = true
mpc-core.workspace = true
noirc-abi = { version = "0.33.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "noirc_abi" }
noirc-artifacts = { version = "0.33.0", git = "https://github.com/noir-lang/noir/", tag = "v0.33.0", package = "noirc_artifacts" }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
