[package]
name = "ultrahonk"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true


[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
eyre.workspace = true
itertools.workspace = true
sha3.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
byteorder.workspace = true
ark-bn254.workspace = true
